바이너리에 대한 쓰기 금지 구현 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -246,3 +246,29 @@ diff --git a/src/threads/thread.h b/src/threads/thread.h
 load 시에 저장하고, exit 시에 레퍼런스 해서 allow 할 수 있도록 해준다. 
 
 
+### Algorithm
+프로세스 시작시에는 다음과 같이 `file_deny_write` 를 통해 파일에 대한 쓰기를 거부한다.
+추가로 thread_current에 file의 레퍼런스를 저장에 종료시에 사용한다. 
+
+```diff
+bool load(const char *file_name, void (**eip)(void), void **esp) {
+  // ...
+  /* open executable */
+  // ...
++  thread_current()->file = file;
++  file_deny_write(file);
+   /* Read and verify executable header. */
+   if (file_read(file, &ehdr, sizeof ehdr) != sizeof ehdr
+       || memcmp(ehdr.e_ident, "\177ELF\1\1\1", 7)
+
+```
+
+프로세스 종료시에는 처음에 저장한 file 레퍼런스를 통해 `file_allow_write` 를 통해 쓰기를 허용한다.
+
+```diff
+void process_exit(void) {
++ if (thread_current()->file != NULL) {
++   file_allow_write(thread_current()->file);
++   file_close(thread_current()->file);
++ }
+```
