argument passing 구현

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -206,6 +206,86 @@ TODO:
 ## 1. User Process
 
 ### A. Argument Passing
+```
+Address       Name            Data          Type
+0xbffffffc    argv[3][...]    bar\0         char[4]
+0xbffffff8    argv[2][...]    foo\0         char[4]
+0xbffffff5    argv[1][...]    -l\0          char[3]
+0xbfffffed    argv[0][...]    /bin/ls\0     char[8]
+0xbfffffec    word-align      0             uint8_t
+0xbfffffe8    argv[4]         0             char *
+0xbfffffe4    argv[3]         0xbffffffc    char *
+0xbfffffe0    argv[2]         0xbffffff8    char *
+0xbfffffdc    argv[1]         0xbffffff5    char *
+0xbfffffd8    argv[0]         0xbfffffed    char *
+0xbfffffd4    argv            0xbfffffd8    char **
+0xbfffffd0    argc            4             int
+0xbfffffcc    return address  0             void (*) ()
+```
+위 예시는 `/bin/ls -l foo bar`를 실행했을 때, argument passing 이 구현된 상태에서의 스택이다. 
+`PYBY_BASE` 는 0xc0000000 에서 시작해서 적절하게 데이터를 저장할 수 있도록 한다.
+`argv` 는 `argv[0]` 부터 `argv[argc-1]` 까지의 주소를 가지고 있고, `argv[argc]` 는 `NULL` 을 가리킨다.
+`argv[0]` 은 프로그램의 이름을 가리키고, `argv[1]` 부터는 프로그램의 인자들을 가리킨다. 인자로 받은 스트링은
+`strtok_r` 함수로 공백으로 분리해서, 스택에 순서대로 push 해야한다. 위 케이스에서 stack pointer 는 `0xbfffffcc` 
+로 초기화 되어야한다. 
+
+#### Data Structure
+```c
+struct arg {
+  int argc;
+  char **argv;
+};
+```
+인자들을 별개로 들고 다니기 여럽기 때문에, 새로운 `struct` 를 정의해 파싱한 인자들을 저장하도록 한다. 
+
+#### Implementation
+아래와 같은 로직으로 인자가 스택에 들어가야하는 순서를 요구 스펙 대로 스택에 푸쉬한다. 그 후 바이너리 로드시, setup 이 완료된 esp
+에 인자들을 추가로 push 하면 된다. 
+```diff
+diff --git a/src/userprog/process.c b/src/userprog/process.c
+--- a/src/userprog/process.c	(revision a4c2c916a136b1748a435d71d0add5afcb2ad1e8)
++++ b/src/userprog/process.c	(date 1697190591459)
+@@ -112,6 +112,17 @@
+   }
+ }
+ 
++void push_arg_stack(char **argv, int argc, void **esp) {
++  // push arguments in reverse order
++  // align memory in multiple of word size for performance
++  // Add null pointer to argv[argc]
++  // push pointer to argument to argv[argc-1] to argv [0]
++  // push pointer to argv
++  // push argc
++  // push return address
++  // set esp to bottom of stack
++}
++
+ /* Sets up the CPU for running user code in the current
+    thread.
+    This function is called on every context switch. */
+@@ -197,7 +208,7 @@
+    Stores the executable's entry point into *EIP
+    and its initial stack pointer into *ESP.
+    Returns true if successful, false otherwise. */
+-bool load(const char *file_name, void (**eip)(void), void **esp) {
++bool load(struct arg *args, void (**eip)(void), void **esp) {
+   struct thread *t = thread_current();
+   struct Elf32_Ehdr ehdr;
+   struct file *file = NULL;
+@@ -285,6 +296,8 @@
+   if (!setup_stack(esp))
+     goto done;
+ 
++  push_arg_stack(arg, esp)
+   /* Start address. */
+   *eip = (void (*)(void)) ehdr.e_entry;
+ 
+
+```
+
+
+
+#### Algorithm
 
 ### B. Process Termination Messages
 
