--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -192,7 +192,9 @@ intr_exit:
 
 
 ## System call procedure
-
+- explain how to call syscall_handler() in userprog/syscall.c from user program
+- see source codes (“lib/user/syscall.c”, “threads/intr-stubs.S”, “threads/interrupt.c”) and
+section 3.5.2 on pintos manual
 ## File system
 
 TODO:
@@ -283,11 +285,9 @@ diff --git a/src/userprog/process.c b/src/userprog/process.c
 
 ```
 
-
-
-#### Algorithm
-
 ### B. Process Termination Messages
+
+
 
 ## 2. System Calls
 
