종료 메세지 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -13,6 +13,7 @@ Team Number: 20
 # Analysis of current implementation
 
 ## Process execution procedure
+
 핀토스 부팅시의 불리는 엔트리포인트 `init.c`의 `main()` 을 보면 User Program 을 위해 initialize하는
 함수들을 볼 수 있다. `tss_init(), gdt_init()` 등의 세그먼트 초기화 과정이 첫번째고, `exeception_init(),
 syscall_init()` 등의 User mode 프로세스에서의 발생할 수 있는 internal interrupt 와 handler,
@@ -55,8 +56,9 @@ code를 호출할 때의 protected gateway 로써 제공하는 기능이다. 예
 만약 이러한 접근이 허용되면 프로세서는 타겟 코드의 세그먼트 셀렉터를 획득해 해당 코드를 수행할 수 있게 된다.
 
 IDT 는 이러한 기능을 지원하는 interrupt gate 들을 저장하고 있다. 인터럽트 핸들링은 커널 모드에서 수행되기 때문에,
-유저 프로그램 수행시 발생한 인터럽트 핸들링은 커널 코드 세그먼트를 요구하고, 그 `intr_gate` 들이 IDT 에 저장된다. (그 외에도 
+유저 프로그램 수행시 발생한 인터럽트 핸들링은 커널 코드 세그먼트를 요구하고, 그 `intr_gate` 들이 IDT 에 저장된다. (그 외에도
 `exception.c` 의 `exception_init()` 에서 정의한 `trap_gate` 등도 추가로 포함되어있다.)
+
 ```c
 void intr_init(void) {
   uint64_t idtr_operand;
@@ -94,11 +96,12 @@ register_handler(uint8_t vec_no, int dpl, enum intr_level level,
 }
 ```
 
-이렇게 프로그램이 실행될 환경을 셋업한 이후에 `run_actions(argv)` 를 호출해 프로그램을 시작하게 된다. 
-`run_actions(argv)` 의 커맨드를 확인해 보면, `action` 에 `run` 들어오게 되면, 
-`run_task()` -> `process_exeecute(task)` 을 순차적으로 불러 프로세스를 실행하게 된다. 
+이렇게 프로그램이 실행될 환경을 셋업한 이후에 `run_actions(argv)` 를 호출해 프로그램을 시작하게 된다.
+`run_actions(argv)` 의 커맨드를 확인해 보면, `action` 에 `run` 들어오게 되면,
+`run_task()` -> `process_exeecute(task)` 을 순차적으로 불러 프로세스를 실행하게 된다.
 
-`process_execute(task)`는 `task` 의 이름으로 스레드를 생성하고, `start_process` 를 하게 된다. 
+`process_execute(task)`는 `task` 의 이름으로 스레드를 생성하고, `start_process` 를 하게 된다.
+
 ```c
 tid_t process_execute(const char *file_name) {
   // ...
@@ -112,7 +115,7 @@ tid_t process_execute(const char *file_name) {
 
 `start_process`는 인터럽트 프레임을 설정하고, `load` 를 통해 프로그램을 메모리에 로드하고, `intr_exit` 을 이용해
 마치 인터럽트에서 복귀하는 것처럼 프로그램을 실행한다. 로드에서 인자로 받는 `eip`, `esp` 는 `load` 함수에서 executable
-의 엔트리 포인트를 `eip` 로 설정하고, 스택 포인터를 `esp` 로 설정한다. 
+의 엔트리 포인트를 `eip` 로 설정하고, 스택 포인터를 `esp` 로 설정한다.
 
 ```c
 bool load(const char *file_name, void (**eip)(void), void **esp) {
@@ -162,9 +165,9 @@ bool load(const char *file_name, void (**eip)(void), void **esp) {
 }
 ```
 
-인터럽트에서 복귀하는 것 처럼 프로그램을 실행한다는 의미는 OS 가 `start_process`를 인터럽트 프레임을 
-초기화 했고, 실행파일을 로드를 완료한 상태에서, `esp`, `eip` 가 적절하게 설정되었다면, 아래의 
-`intr_exit`을 통해 로드한 해당 프로그램으로 진입할 수 있다는 의미다. 
+인터럽트에서 복귀하는 것 처럼 프로그램을 실행한다는 의미는 OS 가 `start_process`를 인터럽트 프레임을
+초기화 했고, 실행파일을 로드를 완료한 상태에서, `esp`, `eip` 가 적절하게 설정되었다면, 아래의
+`intr_exit`을 통해 로드한 해당 프로그램으로 진입할 수 있다는 의미다.
 
 ```asm
 .globl intr_exit
@@ -190,11 +193,12 @@ intr_exit:
 .endfunc
 ```
 
-
 ## System call procedure
+
 - explain how to call syscall_handler() in userprog/syscall.c from user program
 - see source codes (“lib/user/syscall.c”, “threads/intr-stubs.S”, “threads/interrupt.c”) and
-section 3.5.2 on pintos manual
+  section 3.5.2 on pintos manual
+
 ## File system
 
 TODO:
@@ -208,6 +212,7 @@ TODO:
 ## 1. User Process
 
 ### A. Argument Passing
+
 ```
 Address       Name            Data          Type
 0xbffffffc    argv[3][...]    bar\0         char[4]
@@ -224,25 +229,30 @@ Address       Name            Data          Type
 0xbfffffd0    argc            4             int
 0xbfffffcc    return address  0             void (*) ()
 ```
-위 예시는 `/bin/ls -l foo bar`를 실행했을 때, argument passing 이 구현된 상태에서의 스택이다. 
+
+위 예시는 `/bin/ls -l foo bar`를 실행했을 때, argument passing 이 구현된 상태에서의 스택이다.
 `PYBY_BASE` 는 0xc0000000 에서 시작해서 적절하게 데이터를 저장할 수 있도록 한다.
 `argv` 는 `argv[0]` 부터 `argv[argc-1]` 까지의 주소를 가지고 있고, `argv[argc]` 는 `NULL` 을 가리킨다.
 `argv[0]` 은 프로그램의 이름을 가리키고, `argv[1]` 부터는 프로그램의 인자들을 가리킨다. 인자로 받은 스트링은
-`strtok_r` 함수로 공백으로 분리해서, 스택에 순서대로 push 해야한다. 위 케이스에서 stack pointer 는 `0xbfffffcc` 
-로 초기화 되어야한다. 
+`strtok_r` 함수로 공백으로 분리해서, 스택에 순서대로 push 해야한다. 위 케이스에서 stack pointer 는 `0xbfffffcc`
+로 초기화 되어야한다.
 
 #### Data Structure
+
 ```c
 struct arg {
   int argc;
   char **argv;
 };
 ```
-인자들을 별개로 들고 다니기 여럽기 때문에, 새로운 `struct` 를 정의해 파싱한 인자들을 저장하도록 한다. 
+
+인자들을 별개로 들고 다니기 여럽기 때문에, 새로운 `struct` 를 정의해 파싱한 인자들을 저장하도록 한다.
 
 #### Implementation
+
 아래와 같은 로직으로 인자가 스택에 들어가야하는 순서를 요구 스펙 대로 스택에 푸쉬한다. 그 후 바이너리 로드시, setup 이 완료된 esp
-에 인자들을 추가로 push 하면 된다. 
+에 인자들을 추가로 push 하면 된다.
+
 ```diff
 diff --git a/src/userprog/process.c b/src/userprog/process.c
 --- a/src/userprog/process.c	(revision a4c2c916a136b1748a435d71d0add5afcb2ad1e8)
@@ -287,7 +297,28 @@ diff --git a/src/userprog/process.c b/src/userprog/process.c
 
 ### B. Process Termination Messages
 
+유저 프로세스가 종료될 때, 다음과 같은 형식으로 종료 메세지를 출력해야한다.
 
+```c
+printf ("%s: exit(%d)\n", ...);
+```
+
+다음과 같은 케이스에서는 종료 메세지를 출력하지 않는다.
+
+- 커널 스레드의 종료
+- halt syscall invocation
+  따라서, `sys_exit()` 에서 `thread_exit()` 을 호출하기 전에 종료 메세지를 출력하면 위 요구사항을 충족한다.
+
+#### Implementation
+
+```diff
+void sys_exit(int status) {
+  // some code
+  cur->exit_status = status;
++ printf("%s: exit(%d)\n", cur->name, status);
+  thread_exit();
+}
+```
 
 ## 2. System Calls
 
@@ -298,9 +329,9 @@ diff --git a/src/userprog/process.c b/src/userprog/process.c
 ## 3. Denying Writes to Executables
 
 프로그램이 실행중일 때 바이너리 (executable) 이 수정된다면, 프로그램이 예상치 못한 동작을 할 수 있다. 따라서, 현재 실행중인
-프로그램의 파일을 수정하지 못하게 protection 기능을 구현해야한다. 프로세스가 로드하기 위해 바이너리를 오픈 한 후에, 
+프로그램의 파일을 수정하지 못하게 protection 기능을 구현해야한다. 프로세스가 로드하기 위해 바이너리를 오픈 한 후에,
 파일에 대한 쓰기를 거부하도록 하고, 프로세스가 종료할 때, 다시 쓰기를 허용해주는 방식으로 하면, 실행중의 바이너리에 대한 쓰기를
-막을 수 있다. 
+막을 수 있다.
 
 ### Data Structure
 
@@ -323,12 +354,12 @@ diff --git a/src/threads/thread.h b/src/threads/thread.h
 ```
 
 이런식으로 `struct thread` 에 `file` 을 추가해 현재 실행중인 스레드가 어떤 파일에서 읽혔는지
-load 시에 저장하고, exit 시에 레퍼런스 해서 allow 할 수 있도록 해준다. 
-
+load 시에 저장하고, exit 시에 레퍼런스 해서 allow 할 수 있도록 해준다.
 
 ### Algorithm
+
 프로세스 시작시에는 다음과 같이 `file_deny_write` 를 통해 파일에 대한 쓰기를 거부한다.
-추가로 thread_current에 file의 레퍼런스를 저장에 종료시에 사용한다. 
+추가로 thread_current에 file의 레퍼런스를 저장에 종료시에 사용한다.
 
 ```diff
 bool load(const char *file_name, void (**eip)(void), void **esp) {
