--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -195,6 +195,7 @@ intr_exit:
 
 ## System call procedure
 
+TODO:
 - explain how to call syscall_handler() in userprog/syscall.c from user program
 - see source codes (“lib/user/syscall.c”, “threads/intr-stubs.S”, “threads/interrupt.c”) and
   section 3.5.2 on pintos manual
@@ -202,10 +203,16 @@ intr_exit:
 ## File system
 
 TODO:
-
 - structure(file, inode), functions(need to implement system call) of the file system in pintos
 - see source codes (“filesys/ file.c”, “filesys/ inode.c” “filesys/filesys.c”) and section 3.1.2 on
   the manual
+
+  
+### file
+
+### inode
+
+### filesys
 
 # Requirements
 
@@ -306,7 +313,7 @@ printf ("%s: exit(%d)\n", ...);
 다음과 같은 케이스에서는 종료 메세지를 출력하지 않는다.
 
 - 커널 스레드의 종료
-- halt syscall invocation 
+- halt syscall invocation
 
 따라서, `sys_exit()` 에서 `thread_exit()` 을 호출하기 전에 종료 메세지를 출력하면 위 요구사항을 충족한다.
 
@@ -324,8 +331,10 @@ void sys_exit(int status) {
 ## 2. System Calls
 
 ### A. User Process Manipulation
+TODO: halt, exit, exec, wait
 
 ### B. File Manipulation
+TODO: create, remove, open, filesize, read, write, seek, tell, close
 
 ## 3. Denying Writes to Executables
 
