system call 내용 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -224,6 +224,35 @@ IDT에서는 발생한 인터럽트 번호를 이용해 IDT에 저장된 gate를
 
 `intr_handler()`는 외부 인터럽트에 대한 적절한 처리 이후 직접 `intr_handlers`에 저장된 `handler`를 호출한다.
 
+### System Call
+
+시스템 콜 역시 인터럽트이기 때문에 위와 같은 방식으로 처리된다.
+`syscall_handler()`는 `userprog/syscall.c`에서 정의되어 있으며 `syscall_init()`에 의해 인터럽트 번호 0x30으로 설정된다.
+현재 구현에서 `syscall_handler()`는 단순히 `"system call!"`이라는 문장이 출력될 뿐이다.
+
+유저 프로그램은 `lib/user/syscall.c`에 정의된 함수들을 통해 시스템 콜 인터럽트를 발생시킨다.
+
+```c
+/* Projects 2 and later. */
+void halt(void)
+    NO_RETURN;
+void exit(int status)
+    NO_RETURN;
+pid_t exec(const char *file);
+int wait(pid_t);
+bool create(const char *file, unsigned initial_size);
+bool remove(const char *file);
+int open(const char *file);
+int filesize(int fd);
+int read(int fd, void *buffer, unsigned length);
+int write(int fd, const void *buffer, unsigned length);
+void seek(int fd, unsigned position);
+unsigned tell(int fd);
+void close(int fd);
+```
+
+각 함수들은 인자 개수에 맞게 `syscall0` ~ `syscall3`까지 정의된 매크로를 사용하여 시스템 콜에 필요한 인자를 스택에 push하고 `int 0x30`으로 인터럽트를 발생시킨다.
+
 ## File system
 
 TODO:
