File system 내용 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -255,17 +255,62 @@ void close(int fd);
 
 ## File system
 
-TODO:
-- structure(file, inode), functions(need to implement system call) of the file system in pintos
-- see source codes (“filesys/ file.c”, “filesys/ inode.c” “filesys/filesys.c”) and section 3.1.2 on
-  the manual
-
-  
-### file
-
 ### inode
 
+```c
+/* On-disk inode.
+   Must be exactly BLOCK_SECTOR_SIZE bytes long. */
+struct inode_disk {
+  block_sector_t start; /* First data sector. */
+  off_t length;         /* File size in bytes. */
+  unsigned magic;       /* Magic number. */
+  uint32_t unused[125]; /* Not used. */
+};
+
+/* In-memory inode. */
+struct inode {
+  struct list_elem elem;  /* Element in inode list. */
+  block_sector_t sector;  /* Sector number of disk location. */
+  int open_cnt;           /* Number of openers. */
+  bool removed;           /* True if deleted, false otherwise. */
+  int deny_write_cnt;     /* 0: writes ok, >0: deny writes. */
+  struct inode_disk data; /* Inode content. */
+};
+
+static struct list open_inodes;
+```
+
+inode는 index node의 줄임말로, 파일 혹은 디렉토리의 메타데이터를 갖는 구조체이다.
+inode는 inode_disk와 inode_disk가 위치한 sector 등 메타데이터를 가지고 있다.
+inode_disk는 실제 데이터가 저장된 sector 등을 가지고 있다.
+열린 inode는 open_inodes list를 통해 관리된다. inode를 이용해 디스크에 위치한 실제 파일의 내용을 읽고 쓸 수 있다.
+
+
+### file
+
+```c
+/* An open file. */
+struct file {
+  struct inode *inode; /* File's inode. */
+  off_t pos;           /* Current position. */
+  bool deny_write;     /* Has file_deny_write() been called? */
+};
+```
+
+핀토스의 file은 inode 포인터를 가진다. 여러 file이 하나의 inode를 가리키는 것도 가능하다.
+pos는 현재 file이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, deny_write는 파일에 쓰기를 하지 못하게 하는 플래그이다.
+
 ### filesys
+
+```c
+void filesys_init(bool format);
+void filesys_done(void);
+bool filesys_create(const char *name, off_t initial_size);
+struct file *filesys_open(const char *name);
+bool filesys_remove(const char *name);
+```
+
+filesys.c에 파일 시스템과 관련된 함수들이 정의되어있다.
 
 # Requirements
 
