System call 내용 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -428,11 +428,62 @@ void sys_exit(int status) {
 
 ## 2. System Calls
 
-### A. User Process Manipulation
-TODO: halt, exit, exec, wait
+시스템 콜을 구현하기 위해서 사전 준비 작업은 이미 현재 구현에서 잘 되어있다. `syscall_handler()`만 구현하면 된다.
 
-### B. File Manipulation
-TODO: create, remove, open, filesize, read, write, seek, tell, close
+### Algorithms & Implementations
+
+유저 프로그램이 시스템 콜 인터럽트를 발생시킬 때 설정하는 인자들을 파싱하여 사용해야한다.
+시스템 콜 번호에 따라 인자의 개수가 달라지기 때문에 우선적으로 시스템 콜 번호를 확인해야한다.
+시스템 콜 번호는 `syscall-nr.h`에 미리 저장되어있다.
+
+시스템 콜 번호는 `intr_frame`에 저장된 `esp`를 통해 쉽게 접근할 수 있다.
+`intr_frame`에 저장되어 있는 `esp`는 `int 0x30`을 통해 인터럽트를 발생시키면서 저장되기 때문에, `int 0x30`을 호출하기 직전에 스택에 설정하는 인자들에 쉽게 접근할 수 있다.
+중요한 점은 `esp`를 통해 메모리 접근을 할 때 `esp`가 유저 프로그램의 스택을 올바르게 가르키고 있다는 것을 확인해야 한다는 점이다.
+
+```c
+static void syscall_handler(struct intr_frame *f UNUSED) {
+  int syscall_n;
+  int syscall_arg[3];
+  
+  get_syscall_n(f->esp, &syscall_n);
+  
+  switch (syscall_n) {
+    case SYS_HALT:
+      // do halt operation
+      break;
+    case SYS_EXIT:
+      get_syscall_arg(f->esp, syscall_arg);
+      // do exit operation
+      break;
+    ...
+  }
+}
+```
+
+각각의 시스템 콜은 핀토스에서 이미 구현된 함수들을 이용하여 수행할 수 있다. 구현된 함수에 `get_syscall_arg()`를 이용해 구한 인자를 넘겨주면 된다.
+
+구현해야하는 시스템 콜과 이에 대응하는 이미 구현된 함수들의 목록은 다음과 같다.
+
+| 시스템 콜    | 이미 구현된 함수           | 구현된 위치             |
+|----------|---------------------|--------------------|
+| halt     | shut_down_power_off | devices/shutdown.c |
+| exit     | thread_exit         | threads/thread.c   |
+| exec     | process_execute     | userprog/process.c |
+| wait     | process_wait        | userprog/process.c |
+| create   | filesys_create      | userprog/filesys.c |
+| remove   | filesys_remove      | userprog/filesys.c |
+| open     | filesys_open        | userprog/filesys.c |
+| filesize | file_length         | userprog/files.c   |
+| read     | file_read           | userprog/files.c   |
+| write    | file_write          | userprog/files.c   |
+| seek     | file_seek           | userprog/files.c   |
+| tell     | file_tell           | userprog/files.c   |
+| close    | file_close          | userprog/files.c   |
+
+이 중 추가로 고려해야하는 시스템 콜은 파일과 관련된 시스템 콜이다.
+기본적으로 유저 프로그램에서는 파일에 fd를 활용하기 때문에 열려있는 파일에 대해 적절하게 fd를 배분해주어야 한다.
+이때 stdin과 stdout이 0, 1을 임을 주의해서 이 이후 번호부터 받을 수 있도록 해야한다.
+
 
 ## 3. Denying Writes to Executables
 
