--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -159,15 +159,15 @@ IDT에 등록된 gate에는 크게 Descriptor Privilege Level, Segment Selector,
 offset이 저장된다.
 
 핀토스의 인터럽트는 `init.c`의 `main()`에서 `intr_init()`을 통해 초기화된다.
-`intr_init()`은 IDT에 미리 `intr_stubs[i]`를 procedure로 하는 gate를 저장하는데, `intr_stubs`는 `intr-stub.S`에 정의되어있다.
+`intr_init()`은 `idt`에 미리 `intr_stubs[i]`를 procedure로 하는 gate를 저장하는데, `intr_stubs`는 `intr-stub.S`에 정의되어있다.
 이후 `lidt` 명령어를 통해 `idtr` 레지스터에 정의한 `idt`의 위치를 저장한다. 추가적으로 익셉션에 대해서는 번호에 맞는 `intr_names`에 그 이름을 저장한다.
 
-인터럽트가 발생하면 IDT에서 인터럽트 번호로 해당하는 gate를 찾아 `intr_stub()` -> `intr_entry()` -> `intr_handler()` 순서로 호출된다.
+인터럽트가 발생하면 `idt`에서 인터럽트 번호로 해당하는 gate를 찾아 `intr_stub()` -> `intr_entry()` -> `intr_handler()` 순서로 호출된다.
 최종적으로 `intr_handler()`에서 `intr_handlers`에서 인터럽트 번호로 `handler`를 찾아와서 호출하여 인터럽트를 처리한다.
 인터럽트가 발생했을 때의 자세한 과정은 이후 설명하겠지만, 초기화 과정에 주요한 것은 `intr_handlers`를 설정하지 않기 때문에 다른 초기화 과정을 통해 초기화 해야한다는 점이다.
 
 익셉션은 `exeception_init()`, 시스템 콜은 `syscall_init()`에서 이 과정을 수행하며, 다른 필요한 외부 디바이스들 역시 각각의 init 함수를 이용한다.
-각각의 init 함수에서는 `interrupt.c`에서 제공하는 `intr_register_int()`, `intr_register_ext()`를 사용한다.
+각각의 init 함수에서는 인터럽트를 등록하기 위해서 `interrupt.c`에서 제공하는 `intr_register_int()`, `intr_register_ext()`를 사용한다.
 
 `intr_register_int()`와 `intr_register_ext()`에서는 dpl, level, handler 등을 맞춰서 `register_handler()`를
 호출하여 `idt`, `intr_handlers`,
@@ -216,9 +216,9 @@ struct intr_frame {
 ```
 
 인터럽트가 발생하면 먼저 CPU가 ss, esp, eflags, cs, eip를 스택에 push하여 저장하고 필요한 값들로 재설정을 한다.
-이후 IDT에 접근한다. 이때 `intr_init()`에서 설정한 IDTR을 이용한다.
-IDT에서는 발생한 인터럽트 번호를 이용해 IDT에 저장된 gate를 참조하여 지정된 `intr_stubs()`를 찾아서 호출하게 된다.
-이때 gate에 저장된 segment selector를 사용해 GDT를 참조하여 `intr_stubs()`를 찾는다.
+이후 IDT에 접근한다. 이때 `intr_init()`에서 `idtr` 레지스터에 `idt`를 설정해두었기 때문에 이를 이용한다.
+`idt`에서는 발생한 인터럽트 번호를 이용해 `idt`에 저장된 gate를 참조하여 지정된 `intr_stubs()`를 찾아서 호출하게 된다.
+이때 gate에 저장된 segment selector를 사용해 `gdt_init()`에서 초기화한 `gdt`를 참조하여 `intr_stubs()`를 찾는다.
 `intr_stubs()`에서는 인터럽트 번호와 필요한 경우 error code, ebp를 스택에 push하여 저장하고 `intr_entry()`로 점프한다.
 `intr_entry()`에서는 저장해야하는 다른 레지스터들을 마찬가지로 스택에 저장한다. ds와 es등 커널 환경을 설정하고 `intr_handler()`를 호출한다.
 
@@ -280,10 +280,10 @@ struct inode {
 static struct list open_inodes;
 ```
 
-inode는 index node의 줄임말로, 파일 혹은 디렉토리의 메타데이터를 갖는 구조체이다.
-inode는 inode_disk와 inode_disk가 위치한 sector 등 메타데이터를 가지고 있다.
-inode_disk는 실제 데이터가 저장된 sector 등을 가지고 있다.
-열린 inode는 open_inodes list를 통해 관리된다. inode를 이용해 디스크에 위치한 실제 파일의 내용을 읽고 쓸 수 있다.
+`inode`는 index node의 줄임말로, 파일 혹은 디렉토리의 메타데이터를 갖는 구조체이다.
+`inode`는 `inode_disk`와 `inode_disk`가 위치한 sector 등 메타데이터를 가지고 있다.
+`inode_disk`는 실제 데이터가 저장된 sector 등을 가지고 있다.
+열린 `inode`는 `open_inodes` 리스트를 통해 관리된다. `inode`를 이용해 디스크에 위치한 실제 파일의 내용을 읽고 쓸 수 있다.
 
 
 ### file
@@ -297,8 +297,8 @@ struct file {
 };
 ```
 
-핀토스의 file은 inode 포인터를 가진다. 여러 file이 하나의 inode를 가리키는 것도 가능하다.
-pos는 현재 file이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, deny_write는 파일에 쓰기를 하지 못하게 하는 플래그이다.
+핀토스의 `file` 구조체는 `inode` 포인터를 가진다. 여러 `file`이 하나의 `inode`를 가리키는 것도 가능하다.
+`pos`는 현재 `file`이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, `deny_write`는 파일에 쓰기를 하지 못하게 하는 플래그이다.
 
 ### filesys
 
@@ -464,7 +464,7 @@ static void syscall_handler(struct intr_frame *f UNUSED) {
 
 구현해야하는 시스템 콜과 이에 대응하는 이미 구현된 함수들의 목록은 다음과 같다.
 
-| 시스템 콜    | 이미 구현된 함수           | 구현된 위치             |
+| 시스템 콜 | 이미 구현된 함수     | 구현된 위치         |
 |----------|---------------------|--------------------|
 | halt     | shut_down_power_off | devices/shutdown.c |
 | exit     | thread_exit         | threads/thread.c   |
@@ -481,8 +481,8 @@ static void syscall_handler(struct intr_frame *f UNUSED) {
 | close    | file_close          | userprog/files.c   |
 
 이 중 추가로 고려해야하는 시스템 콜은 파일과 관련된 시스템 콜이다.
-기본적으로 유저 프로그램에서는 파일에 fd를 활용하기 때문에 열려있는 파일에 대해 적절하게 fd를 배분해주어야 한다.
-이때 stdin과 stdout이 0, 1을 임을 주의해서 이 이후 번호부터 받을 수 있도록 해야한다.
+기본적으로 유저 프로그램에서는 열어둔 파일을 구별하기 위해 fd를 활용하기 때문에 열려있는 파일에 대해 적절하게 fd를 배분해주어야 한다.
+이때 stdin과 stdout이 0, 1임을 주의해서 이 이후 번호부터 받을 수 있도록 해야한다.
 
 
 ## 3. Denying Writes to Executables
