--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -182,6 +182,7 @@ offset이 저장된다.
 
 ### Entering Interrupt
 
+[//]: # (@formatter:off)
 ```c
 /* Interrupt stack frame. */
 struct intr_frame {
@@ -221,6 +222,7 @@ struct intr_frame {
   uint16_t ss, : 16; /* Data segment for esp. */
 };
 ```
+[//]: # (@formatter:on)
 
 인터럽트가 발생하면 먼저 CPU가 ss, esp, eflags, cs, eip를 스택에 push하여 저장하고 필요한 값들로 재설정을 한다.
 이후 IDT에 접근한다. 이때 `intr_init()`에서 `idtr` 레지스터에 `idt`를 설정해두었기 때문에 이를 이용한다.
@@ -239,12 +241,13 @@ struct intr_frame {
 
 유저 프로그램은 `lib/user/syscall.c`에 정의된 함수들을 통해 시스템 콜 인터럽트를 발생시킨다.
 
+[//]: # (@formatter:off)
 ```c
 /* Projects 2 and later. */
 void halt(void)
-NO_RETURN;
+  NO_RETURN;
 void exit(int status)
-NO_RETURN;
+  NO_RETURN;
 pid_t exec(const char *file);
 int wait(pid_t);
 bool create(const char *file, unsigned initial_size);
@@ -258,16 +261,19 @@ unsigned tell(int fd);
 void close(int fd);
 ```
 
+[//]: # (@formatter:on)
+
 각 함수들은 인자 개수에 맞게 `syscall0` ~ `syscall3`까지 정의된 매크로를 사용하여 시스템 콜에 필요한 인자를 스택에 push하고 `int 0x30`으로 인터럽트를 발생시킨다.
 
 ## File system
 
 ### inode
 
+[//]: # (@formatter:off)
 ```c
 /* On-disk inode.
    Must be exactly BLOCK_SECTOR_SIZE bytes long. */
-  struct inode_disk {
+struct inode_disk {
   block_sector_t start; /* First data sector. */
   off_t length;         /* File size in bytes. */
   unsigned magic;       /* Magic number. */
@@ -287,6 +293,8 @@ void close(int fd);
 static struct list open_inodes;
 ```
 
+[//]: # (@formatter:on)
+
 `inode`는 index node의 줄임말로, 파일 혹은 디렉토리의 메타데이터를 갖는 구조체이다.
 `inode`는 `inode_disk`와 `inode_disk`가 위치한 sector 등 메타데이터를 가지고 있다.
 `inode_disk`는 실제 데이터가 저장된 sector 등을 가지고 있다.
@@ -294,14 +302,16 @@ static struct list open_inodes;
 
 ### file
 
+[//]: # (@formatter:off)
 ```c
 /* An open file. */
 struct file {
-struct inode *inode; /* File's inode. */
-off_t pos;           /* Current position. */
-bool deny_write;     /* Has file_deny_write() been called? */
+  struct inode *inode; /* File's inode. */
+  off_t pos;           /* Current position. */
+  bool deny_write;     /* Has file_deny_write() been called? */
 };
 ```
+[//]: # (@formatter:on)
 
 핀토스의 `file` 구조체는 `inode` 포인터를 가진다. 여러 `file`이 하나의 `inode`를 가리키는 것도 가능하다.
 `pos`는 현재 `file`이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, `deny_write`는 파일에 쓰기를 하지 못하게 하는 플래그이다.
