--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -293,6 +293,41 @@ static struct list open_inodes;
 `inode`는 `inode_disk`와 `inode_disk`가 위치한 sector 등 메타데이터를 가지고 있다.
 `inode_disk`는 실제 데이터가 저장된 sector 등을 가지고 있다.
 열린 `inode`는 `open_inodes` 리스트를 통해 관리된다. `inode`를 이용해 디스크에 위치한 실제 파일의 내용을 읽고 쓸 수 있다.
+실제 파일에 대한 작업은 모두 `filesys/inode.h`에 정의된 `inode`를 이용한 함수들을 이용해 수행된다.
+
+```c
+void inode_init(void);
+bool inode_create(block_sector_t, off_t);
+struct inode *inode_open(block_sector_t);
+struct inode *inode_reopen(struct inode *);
+block_sector_t inode_get_inumber(const struct inode *);
+void inode_close(struct inode *);
+void inode_remove(struct inode *);
+off_t inode_read_at(struct inode *, void *, off_t size, off_t offset);
+off_t inode_write_at(struct inode *, const void *, off_t size, off_t offset);
+void inode_deny_write(struct inode *);
+void inode_allow_write(struct inode *);
+off_t inode_length(const struct inode *);
+```
+
+- `inode_init()`: 열린 `inode` 관리를 위해 `open_inodes` 리스트를 초기화한다.
+- `inode_create()`: 실제 파일 시스템 디바이스의 주어진 섹터에 주어진 길이의 `inode`를 생성한다.
+- `inode_open()`: 이미 열려있는 `inode`인 경우 찾아서 `inode_reopen()`을 호출한 후 반환하고 아닐 경우에는 `inode`를 위한
+메모리를 새로 할당한 후 파일 시스템에서 주어진 섹터의 내용을 읽어와서 저장하고 새로 할당한 메모리를 반환한다.
+- `inode_reopen()`: 주어진 `inode`의 `open_cnt`를 증가시키고 그대로 반환한다.
+- `inode_get_inumber()`: `inode`가 위치한 섹터 번호를 반환한다.
+- `inode_close()`: `inode`를 닫고 디스크에 기록한다(핀토스의 파일 시스템은 write-on-close 방식을 사용한다).
+`inode_cnt`를 감소시키고 그 결과가 0이라면 `open_inodes`에서 제거하며 할당된 메모리를 해제한다. 만약 이 과정에서 `inode`가
+지워졌음이 확인된다면 (`inode->removed`가 설정된 경우) 파일 시스템의 해당 섹터에서도 지워지도록 한다.
+- `inode_remove()`: `inode->removed`를 설정한다. 이후 이 `inode`가 완전히 닫힐 때 파일 시스템 상에서 지워지게 된다.
+- `inode_read_at()`: `inode`의 원하는 위치부터 원하는 크기 까지 내용을 읽어서 인자로 받은 버퍼에 저장한다. 실제로 읽어온 바이트
+수를 반환한다. 읽는 도중 파일의 끝에 도달하거나 에러가 발생하면 인자로 받은 읽으려는 크기보다 작은 값을 반환할 수 있다.
+- `inode_write_at()`: `inode`의 `deny_on_write`를 확인해서 설정되어 있지 않은 경우 원하는 위치에 원하는 크기만큼 버퍼의 내용을
+쓴다. 실제로 적은 바이트 수를 반환한다. `inode_read_at()`과 같은 이유로 인자로 전달한 크기보다 작은 값을 반환할 수 있다.
+- `inode_deny_write()`: `deny_on_write` 값을 1 증가시킨다. 값이 0일 때만 `inode_write_at()`에서 파일 쓰기가 가능하다.
+- `inode_allow_write()`: `deny_on_write` 값을 1 감소시킨다. `inode`에 대해 `inode_deny_write()`를 호출한 적이 있다면
+`inode`를 닫기 전에 반드시 `inode_allow_write()`를 호출하여 `deny_on_write` 값이 적절히 관리되도록 해야한다.
+- `inode_length()`: `inode->data`, 즉 `inode`를 통해 관리되는 실제 파일의 크기를 바이트로 반환한다.
 
 ### file
 
@@ -308,7 +343,60 @@ struct file {
 [//]: # (@formatter:on)
 
 핀토스의 `file` 구조체는 `inode` 포인터를 가진다. 여러 `file`이 하나의 `inode`를 가리키는 것도 가능하다.
-`pos`는 현재 `file`이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, `deny_write`는 파일에 쓰기를 하지 못하게 하는 플래그이다.
+`file`은 시스템에서 파일을 열때마다 생성되지만 실제 파일과 연결되는 `inode`는 단 한 번 열려서 `file`에게 전달되기 때문이다.
+`pos`는 현재 `file`이 실제 파일의 어느 부분을 가리키고 있는 지를 저장하며, `deny_write`는 파일에 쓰기를 하지 못하게 하는
+플래그이다. 실제 파일에 대한 작업을 위해 정의된 `inode.c`의 함수들과 다르게 `file.c`의 함수들은 실제 사용자가 파일과
+상호작용하기 위해 필요한 함수들을 정의한다.
+
+```c
+/* Opening and closing files. */
+struct file *file_open(struct inode *);
+struct file *file_reopen(struct file *);
+void file_close(struct file *);
+struct inode *file_get_inode(struct file *);
+
+/* Reading and writing. */
+off_t file_read(struct file *, void *, off_t);
+off_t file_read_at(struct file *, void *, off_t size, off_t start);
+off_t file_write(struct file *, const void *, off_t);
+off_t file_write_at(struct file *, const void *, off_t size, off_t start);
+
+/* Preventing writes. */
+void file_deny_write(struct file *);
+void file_allow_write(struct file *);
+
+/* File position. */
+void file_seek(struct file *, off_t);
+off_t file_tell(struct file *);
+off_t file_length(struct file *);
+```
+
+- `file_open()`: 주어진 `inode`를 사용하는 `file` 구조체를 만들어서 반환한다. `pos`와 `deny_write`에 대해 초기화한다. 직접
+`inode_open()`을 호출하지 않는데, 이는 `file_open()`을 호출하는 `filesys_open()`에서 이미 열어둔 `inode`를 인자로 전달해주기
+때문이다.
+- `file_reopen()`: 주어진 `file`을 새로 연다. `file`의 `inode`에 대해 `inode_reopen()`을 호출하고 그 결과를 `file_open()`에
+전달하여 그 결과를 반환한다. 결과적으로는 `file`이 가지고 있던 `inode`의 `open_cnt`가 증가하고 동일한 `inode`를 가지는 새로운
+`file`이 할당된다.
+- `file_close()`: `file_allow_write()`, `inode_close()`, `free()`를 차례로 호출하여 `file`을 닫았음을 `inode`에 알리고
+할당을 해제한다.
+- `file_get_inode()`: 주어진 `file`의 `inode`를 반환한다.
+- `file_read()`: `file`의 파일 내용을 읽기 위해서 `inode_read_at()`을 사용한다. 읽기 시작하는 위치 인자로 `pos`를 전달한다.
+실제로 읽은 바이트만큼 `pos`를 증가시키고, 실제 읽은 바이트 수를 반환한다.
+- `file_read_at()`: `file_read()`처럼 `inode_read_at()`을 사용하여 파일 내용을 읽지만, 읽기 시작하는 위치를 추가로 인자로 받아
+전달한다. 실제 읽어온 바이트 수를 반환하지만 `pos`를 변화시키지 않는다.
+- `file_write()`: 주어진 `file`에 쓰기 위해 `inode_write_at()`을 사용한다. 쓰기 시작하는 위치 인자로 `pos`를 전달한다.
+실제로 쓴 바이트만큼 `pos`를 증가시키고, 실제 쓴 바이트 수를 반환한다.
+- `file_write_at()`: `file_write()`처럼 `inode_write_at()`을 사용하여 파일 내용을 읽지만, 읽기 시작하는 위치를 추가로 인자로
+받아 전달한다. 실제 쓴 바이트 수를 반환하지만 `pos`를 변화시키지 않는다.
+- `file_deny_write()`: 인자로 받은 `file`의 `deny_write`가 거짓이라면 `deny_write`가 참이 되게 한다. 함께 `inode`에도
+`inode_deny_write()`를 통해 이를 알린다. 이미 `deny_write`가 참이라면 `inode_deny_write()`가 호출되지 않아서 `inode`의
+`deny_on_write` 값이 중복해서 증가되는 일이 없게한다.
+- `file_allow_write()`: 인자로 받은 `file`의 `deny_write`가 참이라면, `deny_write`가 거짓이 되게 한다. 함께 `inode`에도
+`inode_allow_write()`를 통해이를 알린다. `file_allow_write()`가 `file_close()` 시에 반드시 불리기 때문에 `file_deny_write()`
+를 호출한 적이 있다면 `inode_allow_write()`를 호출하여 `inode`의 `deny_on_write` 값이 적절하게 유지되도록 한다.
+- `file_seek()`: 현재 `file`의 `pos`를 주어진 값으로 변경한다.
+- `file_tell()`: 현재 `file`의 `pos`를 반환한다.
+- `file_length()`: `inode_length()`를 이용해 현재 파일의 길이를 반환한다.
 
 ### filesys
 
@@ -320,7 +408,18 @@ struct file *filesys_open(const char *name);
 bool filesys_remove(const char *name);
 ```
 
-filesys.c에 파일 시스템과 관련된 함수들이 정의되어있다.
+`filesys.c`에 파일을 열거나, 파일을 생성하거나, 파일을 지우는 등 파일 시스템에의 접근이 필요한 함수들이 정의되어 있다. `dir`과
+`file`을 이용해(`dir` 역시 `inode`를 이용해 구현되어 있으며, 디렉토리를 탐색하거나, 디렉토리에 파일을 추가하는 등의 동작이
+정의 되어있다.) 파일 시스템의 통합적인 동작을 담당한다.
+
+- `filesys_init()`: 핀토스에서 사용하는 파일 시스템을 초기화한다.
+- `filesys_done()`: 파일 시스템을 끝내기 위한 함수이다. 데이터에 쓰이지 않은 모든 변경 사항들이 저장된다.
+- `filesys_create()`: 파일 시스템에 새로운 파일을 생성한다. `inode_create()`를 이용해 실제 파일을 생성하며, `dir_add()`를
+이용하여 디렉토리에도 추가한다. 성공 여부를 반환한다.
+- `filesys_open()`: 파일 시스템에서 인자로 받은 파일 이름을 가진 파일을 연다. `dir_lookup()`을 통해 `inode`를 찾아서 열어주면,
+이를 `file_open()`에 전달하고 이를 반환한다. 실패하면 null을 반환한다.
+- `filesys_remove()`: 파일 시스템에서 인자로 받은 파일 이름을 가진 파일을 찾아서 삭제한다. `dir_remove()`를 이용하는데,
+`dir_remove()`에서 `inode_remove()`도 호출해주기 때문에 추가적인 작업은 필요하지 않다. 성공 여부를 반환한다.
 
 # Requirements
 
