--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -539,7 +539,51 @@ void sys_exit(int status) {
 
 시스템 콜을 구현하기 위해서 사전 준비 작업은 이미 현재 구현에서 잘 되어있다. `syscall_handler()`만 구현하면 된다.
 
+### Data Structure
+
+```c
+// userprog/process.h
+struct pcb {
+  pid_t pid;
+  pid_t parent_pid;
+
+  int exit_code;
+  
+  struct file *file;
+  struct file **fd_list;
+  int file_cnt;
+
+  struct semaphore load_sema;
+  struct semaphore wait_sema;
+  pid_t waiting_pid;
+}
+
+// threads/thread.h
+struct thread {
+  ...
+#ifdef USERPROG
+  /* Owned by userprog/process.c. */
+  uint32_t *pagedir; /* Page directory. */
+  struct pcb *pcb;
+#endif
+ ...
+}
+```
+
+User Process Manipulation과 File Manipulation에 관련된 시스템 콜을 구현하기 위해 위와 같은 pcb 구조체가 필요하다.
+- `pid`: 현재 프로세스의 pid
+- `parent_pid`: 현재 프로세스의 parent 프로세스의 pid
+- `exit_code`: 프로세스가 종료될 때 종료 코드를 저장한다. (2-B. Process Termination Messages 참고)
+- `file`: 현재 프로세스의 실행 파일 (3. Denying Writes to Executables 참고)
+- `fd_list`: 현재 프로세스가 연 파일과 fd를 대응시킨다. 0과 1은 각각 STDIN과 STDOUT에 대응되도록 한다. `fd_list[fd]`와 같이 fd에 해당하는 file에 접근할 수 있다.
+- `file_cnt`: 새로운 파일을 열었을 때 `fd`를 부여하기 위해 사용된다.
+- `load_sema`: exec 실행 시 child의 load()가 완료되는 것을 확인하기 위한 semaphore
+- `wait_sema`: wait 실행 시 child가 종료될 때 까지 기다리기 위한 semaphore
+- `waiting_pid`: wait 실행 시 기다리고 있는 대상 child의 pid
+
 ### Algorithms & Implementations
+
+#### syscall_handler()
 
 유저 프로그램이 시스템 콜 인터럽트를 발생시킬 때 설정하는 인자들을 파싱하여 사용해야한다.
 시스템 콜 번호에 따라 인자의 개수가 달라지기 때문에 우선적으로 시스템 콜 번호를 확인해야한다.
@@ -569,29 +613,54 @@ static void syscall_handler(struct intr_frame *f UNUSED) {
 }
 ```
 
-각각의 시스템 콜은 핀토스에서 이미 구현된 함수들을 이용하여 수행할 수 있다. 구현된 함수에 `get_syscall_arg()`를 이용해 구한 인자를 넘겨주면 된다.
+각각의 시스템 콜은 아래에서 제시할 알고리즘에 따라 `userprog/syscall.c`에서 각각의 함수로 구현하여 사용한다. 구현된 함수에 `get_syscall_arg()`를 이용해 구한 인자를 넘겨주면 된다. 시스템 콜의 반환값은 `eax` 레지스터에 있는 것으로 간주되기 때문에 반환값이
+있는 시스템 콜은 종료 시에 인터럽트 프레임에 저장된 `eax` 레지스터의 값을 반환값으로 변경해주는 것으로 유저 프로그램에게 시스템 콜
+결과를 전달한다.
 
-구현해야하는 시스템 콜과 이에 대응하는 이미 구현된 함수들의 목록은 다음과 같다.
+#### User process manipulation
 
-| 시스템 콜    | 이미 구현된 함수           | 구현된 위치             |
-|----------|---------------------|--------------------|
-| halt     | shut_down_power_off | devices/shutdown.c |
-| exit     | thread_exit         | threads/thread.c   |
-| exec     | process_execute     | userprog/process.c |
-| wait     | process_wait        | userprog/process.c |
-| create   | filesys_create      | userprog/filesys.c |
-| remove   | filesys_remove      | userprog/filesys.c |
-| open     | filesys_open        | userprog/filesys.c |
-| filesize | file_length         | userprog/files.c   |
-| read     | file_read           | userprog/files.c   |
-| write    | file_write          | userprog/files.c   |
-| seek     | file_seek           | userprog/files.c   |
-| tell     | file_tell           | userprog/files.c   |
-| close    | file_close          | userprog/files.c   |
+User process manipulation을 위한 시스템 콜과 각각의 알고리즘은 다음과 같다.
 
-이 중 추가로 고려해야하는 시스템 콜은 파일과 관련된 시스템 콜이다.
-기본적으로 유저 프로그램에서는 열어둔 파일을 구별하기 위해 fd를 활용하기 때문에 열려있는 파일에 대해 적절하게 fd를 배분해주어야 한다.
-이때 stdin과 stdout이 0, 1임을 주의해서 이 이후 번호부터 받을 수 있도록 해야한다.
+- `halt()`
+  - `devices/shutdown.h`의 `shutdown_power_off()`를 호출한다.
+- `exit()`
+  - process의 `exit_code`를 설정하고 process에서 할당했던 메모리들을 해제한다.
+  - parent_pid를 통해 현재 parent 프로세스가 `wait()` 중인지, `waiting_pid`가 자신인지 확인하여 맞다면, `wait_sema`를 up
+  해준다.
+- `exec()`
+  - 인자로 받은 파일을 실행한다. 실행은 `process_execute()`를 이용한다.
+  - 실행 결과를 보장하기 위해 parent는 0으로 초기화한 `load_sema`를 down하여 기다리고, child는 `load()` 종료 후에 `load_sema`
+  를 up하여 parent를 풀어준다.
+  - 풀려난 parent는 `process_execute()`의 결과로 반환되는 tid를 통해 `load()` 성공 여부를 확인한 후 성공한 경우 child의
+  `parent_pid`를 설정한 후에 pid를 반환하고, 아닌 경우 즉시 -1을 반환한다.
+- `wait()`
+  - 인자로 받은 프로세스가 종료될 때까지 대기한다. 현재 제대로 구현되지 않은 `process_wait()`를 구현하여 사용한다.
+  - 인자로 받은 프로세스의 `parent_pid`를 확인하여 자신의 child가 맞는 지 확인한다. 아니라면 -1을
+  즉시 반환한다.
+  - 0으로 초기화 된 `wait_sema`를 down하여 child 프로세스가 종료되기를 기다린다.
+  - child가 `exit()`을 통해 종료된 경우 child 프로세스의 `exit_code`를 확인하여 반환하고, 다른 방법으로 종료가 된다면 -1을 반환한다.
+
+#### File manipulation
+
+File manipulation을 위한 시스템 콜은 이미 구현된 `filesys/` 의 함수들을 이용한다.
+
+먼저 filesys.c의 함수를 이용하는 시스템 콜은 다음과 같다.
+- `create()`: filesys_create()를 이용한다.
+- `remove()`: filesys_remove()를 이용한다.
+- `open()`: filesys_open()을 이용한다. `fd_list`에 `filesys_open()` 결과인 `struct file *`를 저장하고 `file_cnt`를 하나 증가시킨다.
+
+file.c의 함수를 이용하는 시스템 콜은 다음과 같다.
+- `filesize()`: file_length()를 이용한다.
+- `read()`: file_read()를 이용한다. fd가 0인 경우 input_getc()를 이용해 키보드로부터 입력을 받는다.
+- `write()`: file_write()를 이용한다. fd가 1인 경우 putbuf()를 이용해 콘솔에 내용을 적는다.
+- `seek()`: file_seek()를 이용한다.
+- `tell()`: file_tell()을 이용한다.
+- `close()`: file_close()를 이용한다. `fd_list[fd]`가 null이 되도록 한다.
+
+`file.c`의 함수를 이용하는 시스템 콜은 `struct file *`를 인자로 받는 원본 함수와 다르게 fd를 인자로 받는다. 원본 함수에 인자를
+전달하기 위해서 `fd_list`에 fd로 접근하여 `struct file *`를 찾아서 인자로 전달해주어야 한다. 닫혀서 `fd_list[fd]`가 null이 된
+파일에 접근하려고 하더라도 원본 함수에서 null에 대한 처리가 적절하게 되어있기 때문에 fd가 `file_cnt`보다 큰 지를 확인하여 배열을
+넘어가지 않는지만 확인해면 된다.
 
 ## 3. Denying Writes to Executables
 
