--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -64,16 +64,17 @@ tid_t process_execute(const char *file_name) {
 ```
 
 `start_process()`는 인터럽트 프레임을 설정하고, 프로그램을 메모리에 로드하기 위해 `load()` 를 호출한다.
+이때 인터럽트 프레임의 `eip`와 `esp`는 `load()`의 인자로 전달하여 실행 프로그램의 메타데이터를 이용하여 설정되도록한다.
 `load()`는 다음과 같은 작업을 수행한다. 가상 주소와 실제 주소를 연결짓는데 필요한 Page Directory를 할당받고,
 CR3(PDBR) 레지스터에 할당받은 Page Directory의 주소를 저장하고 tss_update()를 통해
 tss의 esp0를 현재 실행중인 스레드 스택의 top으로 설정한다. 이는 이후 이 실행 프로그램 실행 중에
 ring0에 접근해야하는 인터럽트가 발생하면 현재 실행중인 스레드의 스택을 사용하기 위함이다. 이후 `load()`는
 실행 프로그램을 열어 실행 헤더를 읽어 검증한 후, 프로그램의 내용을 분할하여 검증하고 새로 할당하는 메모리에 저장한다.
 분할되어 저장된 프로그램의 내용들을 Page Directory에 등록하여 프로그램 각 부분의 가상 주소를 통해 실제 저장된 메모리에 접근할 수 있도록 한다.
-이때 인터럽트 프레임의 `eip`와 `esp`는 `load()`의 인자로 전달하여 실행 프로그램의 메타데이터를 이용하여 설정되도록한다.
 setup_stack()은 스택을 위한 메모리를 할당하고 Page Directory에 등록한다.
 이후, 해당 메모리에 접근할 수 있는 가상 주소(PHYS_BASE)를 인자로 받은 인터럽트 프레임의 esp에 저장한다.
 `load()`가 성공적으로 완료되면 `intr_exit()` 을 이용해 마치 인터럽트에서 복귀하는 것처럼 프로그램을 실행한다.
+인자로 받은 인터럽트 프레임의 eip에는 실행 파일 메타데이터에서 읽어온 엔트리 포인트를 저장한다.
 
 ```c
 bool load(const char *file_name, void (**eip)(void), void **esp) {
