frame table: solution baseline 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -69,13 +69,33 @@ page의 할당 해제는 마찬가지로 palloc.c에 정의된 `palloc_free_page
 palloc_free_page()는 내부적으로 `palloc_free_multiple()` 함수를 호출하는데, 이 함수가 pool에 직접 접근하여 page를 해제한다.
 page를 해제한다는 것은 used_map에서 1인 비트를 찾아 0으로 바꾸는 것을 의미한다.
 
-### Limitations and Solutions
 #### Limitations
 
 현재 pintos는 물리 주소를 두 부분으로 나누어 각각 user pools와 kernel pools로 사용하며, 각 pool이 가득 차면 page를 할당할 수 없다.
 이를 해결하기 위해서는 적절한 eviction과 swap이 필요하다. eviction과 swap을 위해서는 frame table이 있어야한다.
 
 ### Solution
+
+#### Data Structure
+
+frame table은 physical memory의 할당된 page마다 가지는 frame table entry를 저장한다.
+frame table entry는 physical memory에 할당된 page(frame)에 대한 정보를 가지며 어떤 process의 어떤 user page에 의해 사용되는지를 저장한다.
+
+frame table과 frame table entry는 다음과 같이 정의된다.
+
+```c
+
+```
+
+#### Algorithms and Implementation
+
+- Frame Allocation
+
+- Frame Deallocation
+
+- Eviction
+
+- Search frames used by user process
 
 ## 2. Lazy Loading
 
