--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -87,7 +87,7 @@ frame table과 frame table entry는 다음과 같이 정의된다.
 struct hash frame_table;
 
 struct frame_table_entry {
-  void *frame;
+  void *page_frame;
   struct thread *thread;
   void *upage;
   struct hash_elem elem;
@@ -98,9 +98,9 @@ frame table은 pintos에서 제공하는 hash table을 이용해 구현한다.
 frame table entry는 frame table에 저장되는 데이터이다.
 frame table이 hash table로 구현되기 때문에 frame table entry는 hash_elem을 멤버로 가지고 있어야 한다.
 이외의 frame table entry의 멤버는 다음과 같다.
-frame은 physical memory에 할당된 page의 주소를 가리킨다.
-thread는 해당 frame을 사용하는 process를 가리킨다.
-upage는 process의 해당 frame을 사용하는 user page를 가리킨다.
+page_frame은 physical memory에 할당된 page의 주소를 가리킨다.
+thread는 해당 page_frame을 사용하는 process를 가리킨다.
+upage는 process의 해당 page_frame을 사용하는 user page를 가리킨다.
 
 
 #### Algorithms and Implementation
