frame table: Algorithms and Implementation 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -105,13 +105,134 @@ upage는 process의 해당 page_frame을 사용하는 user page를 가리킨다.
 
 #### Algorithms and Implementation
 
+- Frame Table Initialization and Hash Functions
+
+Frame Table을 초기화하기 위해서 `frame_table_init()`를 사용한다.
+`frame_table_init()`는 `hash_init()`를 호출하여 frame table을 초기화한다.
+
+hash_init()을 위해서는 hash function과 less function이 필요하다.
+hash function은 frame table entry의 frame을 hash하는 함수이다. Pintos에서 제공하는 hash_bytes()를 사용한다.
+less function은 frame table entry를 비교하는 함수이다. frame table entry의 frame을 비교한 결과를 반환한다.
+
+```c
+bool frame_table_init(void) {
+  return hash_init(&frame_table, frame_table_hash, frame_table_less, NULL);
+}
+
+unsigned frame_table_hash(const struct hash_elem *elem, void *aux UNUSED) {
+  const struct frame_table_entry *fte = hash_entry(elem, struct frame_table_entry, elem);
+  return hash_bytes(&fte->page_frame, sizeof(fte->page_frame));
+}
+
+bool frame_table_less(const struct hash_elem *a, const struct hash_elem *b, void *aux UNUSED) {
+  const struct frame_table_entry *fte_a = hash_entry(a, struct frame_table_entry, elem);
+  const struct frame_table_entry *fte_b = hash_entry(b, struct frame_table_entry, elem);
+  return fte_a->page_frame < fte_b->page_frame;
+}
+```
+
 - Frame Allocation
+
+user page에 대한 page_frame을 할당받기 위해 frame_get_page()를 사용한다.
+
+```c
+void *frame_get_page(enum palloc_flags flags, void *upage) {
+  void *page_frame = palloc_get_page(flags);
+  if (page_frame == NULL) {
+    frame_evict();
+    page_frame = palloc_get_page(flags);
+  }
+  if (frame != NULL) {
+    struct frame_table_entry *fte = malloc(sizeof(struct frame_table_entry));
+    fte->page_frame = page_frame;
+    fte->thread = thread_current();
+    fte->upage = upage;
+    hash_insert(&frame_table, &fte->elem);
+  }
+  return frame;
+}
+```
+
+우선 page_frame을 할당받는다. 이때 palloc_get_page()를 사용한다. flags에 따라 어떤 pool에서 할당받을지 결정된다.
+만약 할당받을 수 없다면 frame_evict()를 호출한 후에 다시 page_frame을 할당받는다. frame_evict()는 아래에서 설명한다.
+page_frame을 할당받았다면 frame table entry를 생성하여 각 멤버를 초기화한 후 frame table에 추가한다.
+이후, 할당받은 page_frame의 주소를 반환한다.
 
 - Frame Deallocation
 
+page_frame을 해제하기 위해 frame_free_page()를 사용한다.
+
+```c
+void frame_free_page(void *page_frame) {
+  struct frame_table_entry fte;
+  fte.page_frame = page_frame;
+  struct hash_elem *e = hash_find(&frame_table, &fte.elem);
+  if (e != NULL) {
+    hash_delete(&frame_table, e);
+    palloc_free_page(page_frame);
+    free(hash_entry(e, struct frame_table_entry, elem));
+  }
+}
+```
+
+user page의 frame을 해제하기 위해서는 frame table에서 해당 frame을 가지는 frame table entry를 찾아야 한다.
+이를 위해 frame table entry를 생성하고, frame을 설정하여 이를 frame table에서 찾는다.
+만약 찾았다면 frame table에서 해당 frame을 가지는 frame table entry를 삭제하고, frame table entry를 해제한다.
+
 - Eviction
 
+Eviction policy는 page_frame을 더 이상 할당 받을 수 없을 때 이미 할당된 page_frame 중에서 할당을 해제할 page_frame을 결정하는 정책이다.
+Eviction policy는 page replacement algorithm의 중요한 구성 요소이다.
+
+Eviction policy를 결정하는데 사용할 수 있는 정보는 PTE에 저장된 accessed bit이다.
+accessed bit는 해당 page가 최근에 접근되었는지를 나타내는 bit로, 해당 page에 대한 read나 write가 발생할 때 설정된다.
+accessed bit를 이용하여 approximated LRU(Least Recently Used)를 eviction policy로 사용한다.
+구현은 다음과 같다.
+
+```c
+void frame_evict(void) {
+  struct frame_table_entry *target = NULL;
+  struct hash_iterator i;
+  hash_first(&i, &frame_table);
+  while (hash_next(&i)) {
+    struct frame_table_entry *fte = hash_entry(hash_cur(&i), struct frame_table_entry, elem);
+    if (target != NULL)
+      pagedir_set_accessed(target->thread->pagedir, target->upage, false);
+    if (!pagedir_is_accessed(fte->thread->pagedir, fte->upage)) {
+      target = fte;
+    }
+    pagedir_set_accessed(fte->thread->pagedir, target->upage, false);
+  }
+  if (target == NULL) {
+    hash_first(&i, &frame_table);
+    target = hash_entry(hash_cur(&i), struct frame_table_entry, elem);
+    // if target dirty, write to swap
+  }
+  
+  hash_delete(&frame_table, &target->elem);
+  pagedir_clear_page(target->thread->pagedir, target->upage);
+  palloc_free_page(target->page_frame);
+  free(target);
+}
+```
+
+frame_table을 순회하면서 accessed bit가 설정되어 있지 않은 page를 가진 frame table entry를 찾는다.
+만약 찾았다면 해당 frame table entry를 target으로 한다.
+target을 제외한 나머지에 대해서는 accessed bit를 false로 초기화한다.
+이는 다음 frame_evict()가 호출될 때, 현재 frame_evict() 이후로 해당 page에 read나 write가 발생하였는지 확인하기 위함이다.
+찾을 수 없다면 target은 hash_first()를 통해 frame_table의 첫 번째 frame table entry로 설정한다.
+이 경우 target에 지정된 page는 dirty bit를 가지고 있을 수 있다.
+이는 target에 write된 내용이 있다는 뜻으로, 이 경우 target을 swap_disk에 저장한다.
+swap에 대한 자세한 내용은 아래 6. Swap Table에서 설명한다.
+
+이후, target에 대한 eviction을 진행한다.
+eviction은 frame table에서 target을 삭제하고, target을 사용하는 process의 page directory에서 해당 page를 지운다.
+palloc_get_page()로 할당받았던 page_frame을 해제하고 마지막으로 frame table entry인 target을 해제한다.
+
 - Search frames used by user process
+
+특정 user process에서 사용 중인 frame을 찾기 위해서는 먼저 frame_table을 순회하면서 thread가 일치하는 frame table entry를 찾는다.
+이후 해당 frame table entry의 frame 주소가 user pools에서 할당받은 frame인지 확인하여 찾아낼 수 있다.
 
 ## 2. Lazy Loading
 
