requirements 세부 template 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -236,12 +236,84 @@ palloc_get_page()로 할당받았던 page_frame을 해제하고 마지막으로 
 
 ## 2. Lazy Loading
 
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
+
 ## 3. Supplemental Page Table
+
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
 
 ## 4. Stack Growth
 
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
+
 ## 5. File Memory Mapping
+
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
 
 ## 6. Swap Table
 
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
+
 ## 7. On Process Termination
+
+### Current Implementation
+
+#### ...
+
+#### Limitations
+
+### Solution
+
+#### Data Structure
+
+#### Algorithms and Implementation
