lazy loading: current implementation 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -238,9 +238,21 @@ palloc_get_page()로 할당받았던 page_frame을 해제하고 마지막으로 
 
 ### Current Implementation
 
-#### ...
+#### Loading Executable
+
+현재 pintos는 user process를 실행하기 위해 필요한 모든 내용을 executable file에서 읽어와 메모리에 적재한다.
+실행에 필요한 모든 정보가 page로 올라와 있기 때문에 이후 user process를 실행하는 동안 발생하는 page fault는 에러 상황으로 처리된다.
+
+```c
+
+```
 
 #### Limitations
+
+현재 구현에서는 user process를 loading할 때, 모든 내용을 한 번에 읽어오기 때문에 비효율적이다.
+또한, 이 과정에서 할당할 수 있는 page가 부족하다면 load가 실패하기 때문에 user process를 아예 실행할 수 없다.
+page 부족은 eviction을 통해 해결할 수 있지만, 여전히 실행하는데 당장 필요하지 않은 모든 page가 메모리에 적재되어 있기 때문에 비효율적이다.
+이를 해결하기 위해서 동적으로 loading이 필요할 때 loading을 진행하는 lazy loading이 필요하다.
 
 ### Solution
 
