--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -241,10 +241,121 @@ palloc_get_page()로 할당받았던 page_frame을 해제하고 마지막으로 
 #### Loading Executable
 
 현재 pintos는 user process를 실행하기 위해 필요한 모든 내용을 executable file에서 읽어와 메모리에 적재한다.
+읽어오는 부분은 load()에서 이루어지며, 실제 메모리에 적재하는 것은 load_segment()에서 이루어진다.
 실행에 필요한 모든 정보가 page로 올라와 있기 때문에 이후 user process를 실행하는 동안 발생하는 page fault는 에러 상황으로 처리된다.
 
 ```c
+bool load(const char *file_name, void (**eip)(void), void **esp) {
+  /* parse arguments */
+  ...
+  /* Allocate and activate page directory. */
+  ...
+  /* Open executable file. */
+  ...
+  /* Read and verify executable header. */
+  ...
+  
+  /* Read program headers. */
+  file_ofs = ehdr.e_phoff;
+  for (i = 0; i < ehdr.e_phnum; i++) {
+    struct Elf32_Phdr phdr;
 
+    if (file_ofs < 0 || file_ofs > file_length(file))
+      goto done;
+    file_seek(file, file_ofs);
+
+    if (file_read(file, &phdr, sizeof phdr) != sizeof phdr)
+      goto done;
+    file_ofs += sizeof phdr;
+    switch (phdr.p_type) {
+    case PT_NULL:
+    case PT_NOTE:
+    case PT_PHDR:
+    case PT_STACK:
+    default:
+      /* Ignore this segment. */
+      break;
+    case PT_DYNAMIC:
+    case PT_INTERP:
+    case PT_SHLIB: goto done;
+    case PT_LOAD:
+      if (validate_segment(&phdr, file)) {
+        bool writable = (phdr.p_flags & PF_W) != 0;
+        uint32_t file_page = phdr.p_offset & ~PGMASK;
+        uint32_t mem_page = phdr.p_vaddr & ~PGMASK;
+        uint32_t page_offset = phdr.p_vaddr & PGMASK;
+        uint32_t read_bytes, zero_bytes;
+        if (phdr.p_filesz > 0) {
+          /* Normal segment.
+               Read initial part from disk and zero the rest. */
+          read_bytes = page_offset + phdr.p_filesz;
+          zero_bytes = (ROUND_UP(page_offset + phdr.p_memsz, PGSIZE)
+                        - read_bytes);
+        } else {
+          /* Entirely zero.
+               Don't read anything from disk. */
+          read_bytes = 0;
+          zero_bytes = ROUND_UP(page_offset + phdr.p_memsz, PGSIZE);
+        }
+        if (!load_segment(file, file_page, (void *) mem_page,
+                          read_bytes, zero_bytes, writable))
+          goto done;
+      } else
+        goto done;
+      break;
+    }
+  }
+  
+  
+  /* Set up stack. */
+  ...
+  /* Start address. */
+  ...
+  
+  done:
+    /* We arrive here whether the load is successful or not. */
+    return success;
+}
+
+static bool load_segment(struct file *file, off_t ofs, uint8_t *upage,
+             uint32_t read_bytes, uint32_t zero_bytes, bool writable) {
+    ASSERT((read_bytes + zero_bytes) % PGSIZE == 0);
+  ASSERT(pg_ofs(upage) == 0);
+  ASSERT(ofs % PGSIZE == 0);
+
+  file_seek(file, ofs);
+  while (read_bytes > 0 || zero_bytes > 0) {
+    /* Calculate how to fill this page.
+       We will read PAGE_READ_BYTES bytes from FILE
+       and zero the final PAGE_ZERO_BYTES bytes. */
+    size_t page_read_bytes = read_bytes < PGSIZE ? read_bytes : PGSIZE;
+    size_t page_zero_bytes = PGSIZE - page_read_bytes;
+
+    /* Get a page of memory. */
+    uint8_t *kpage = palloc_get_page(PAL_USER);
+    if (kpage == NULL)
+      return false;
+
+    /* Load this page. */
+    if (file_read(file, kpage, page_read_bytes) != (int) page_read_bytes) {
+      palloc_free_page(kpage);
+      return false;
+    }
+    memset(kpage + page_read_bytes, 0, page_zero_bytes);
+
+    /* Add the page to the process's address space. */
+    if (!install_page(upage, kpage, writable)) {
+      palloc_free_page(kpage);
+      return false;
+    }
+
+    /* Advance. */
+    read_bytes -= page_read_bytes;
+    zero_bytes -= page_zero_bytes;
+    upage += PGSIZE;
+  }
+  return true;
+}
 ```
 
 #### Limitations
