frame table: 변수명 변경

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -149,7 +149,7 @@ void *frame_alloc(enum palloc_flags flags, void *upage) {
     f->frame_page = frame_page;
     f->thread = thread_current();
     f->upage = upage;
-    hash_insert(&frame_table, &fte->elem);
+    hash_insert(&frame_table, &f->elem);
   }
   return frame_page;
 }
@@ -197,13 +197,13 @@ void frame_evict(void) {
   struct hash_iterator i;
   hash_first(&i, &frame_table);
   while (hash_next(&i)) {
-    struct frame *fte = hash_entry(hash_cur(&i), struct frame, elem);
+    struct frame *f = hash_entry(hash_cur(&i), struct frame, elem);
     if (target != NULL)
       pagedir_set_accessed(target->thread->pagedir, target->upage, false);
-    if (!pagedir_is_accessed(fte->thread->pagedir, fte->upage)) {
-      target = fte;
+    if (!pagedir_is_accessed(f->thread->pagedir, f->upage)) {
+      target = f;
     }
-    pagedir_set_accessed(fte->thread->pagedir, target->upage, false);
+    pagedir_set_accessed(f->thread->pagedir, target->upage, false);
   }
   if (target == NULL) {
     hash_first(&i, &frame_table);
@@ -218,8 +218,8 @@ void frame_evict(void) {
 }
 ```
 
-frame_table을 순회하면서 accessed bit가 설정되어 있지 않은 page를 가진 frame table entry를 찾는다.
-만약 찾았다면 해당 frame table entry를 target으로 한다.
+frame_table을 순회하면서 accessed bit가 설정되어 있지 않은 page를 가진 frame을 찾는다.
+만약 찾았다면 해당 frame을 target으로 한다.
 target을 제외한 나머지에 대해서는 accessed bit를 false로 초기화한다.
 이는 다음 frame_evict()가 호출될 때, 현재 frame_evict() 이후로 해당 page에 read나 write가 발생하였는지 확인하기 위함이다.
 찾을 수 없다면 target은 hash_first()를 통해 frame_table의 첫 번째 frame table entry로 설정한다.
@@ -229,7 +229,7 @@ swap에 대한 자세한 내용은 아래 6. Swap Table에서 설명한다.
 
 이후, target에 대한 eviction을 진행한다.
 eviction은 frame table에서 target을 삭제하고, target을 사용하는 process의 page directory에서 해당 page를 지운다.
-palloc_get_page()로 할당받았던 frame_page을 해제하고 마지막으로 frame table entry인 target을 해제한다.
+palloc_free_page()로 할당받았던 frame_page을 해제하고 마지막으로 frame인 target을 해제한다.
 
 - Search frames used by user process
 
