lazy loading: 용어 사용 명확하게 정리

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -363,21 +363,23 @@ static bool load_segment(struct file *file, off_t ofs, uint8_t *upage,
 #### Limitations
 
 현재 구현에서는 user process를 loading할 때, 모든 내용을 한 번에 읽어오기 때문에 비효율적이다.
-또한, 이 과정에서 할당할 수 있는 page가 부족하다면 load가 실패하기 때문에 user process를 아예 실행할 수 없다.
-page 부족은 eviction을 통해 해결할 수 있지만, 여전히 실행하는데 당장 필요하지 않은 모든 page가 메모리에 적재되어 있기 때문에 비효율적이다.
+또한, 이 과정에서 사용가능한 physical memory가 부족하다면 load가 실패하기 때문에 user process를 아예 실행할 수 없다.
+physical memory 부족은 eviction을 통해 해결이 가능하지만, 여전히 당장 필요하지 않은 모든 내용이 physical memory에 적재되므로 비효율적이다.
 이를 해결하기 위해서 동적으로 loading이 필요할 때 loading을 진행하는 lazy loading이 필요하다.
 
 ### Solution
 
 실행 파일의 필요한 부분을 필요할 때마다 메모리에 적재하는 lazy loading을 구현한다.
 lazy loading은 이후 설명할 supplemental page table을 통해 구현할 수 있다.
-실행 파일의 필요한 부분을 실제 메모리에 load하는 것이 아니라 supplemental page table에 page로 등록을 해둠으로써 구현할 수 있다.
-lazy loading에 의한 page fault 발생시 supplemental page table을 참고하여 필요한 부분을 메모리에 적재하여 참고하도록 할 수 있다.
+
+프로세스 시작 시에 필요한 정보가 physical memory에 load되는 것이 아니기 때문에 이에 접근 시에 page fault가 발생한다.
+이를 page fault handler가 감지하면 supplemental page table을 참고하도록한다.
+page fault가 일어난 주소에 어떤 정보가 있어야 하는 지를 확인하고, 이에 맞게 physical memory에 load함으로써 lazy loading이 작동된다.
 
 #### Algorithms and Implementation
 
 ```c
-static bool load_segment(struct file *file, off_t ofs, uint8_t *upage,
+static bool load_segment_lazy(struct file *file, off_t ofs, uint8_t *upage,
              uint32_t read_bytes, uint32_t zero_bytes, bool writable) {
   ASSERT((read_bytes + zero_bytes) % PGSIZE == 0);
   ASSERT(pg_ofs(upage) == 0);
@@ -389,7 +391,6 @@ static bool load_segment(struct file *file, off_t ofs, uint8_t *upage,
     size_t page_zero_bytes = PGSIZE - page_read_bytes;
     
     /* Add page to the supplemental page table */
-    spt_set_file_page();
     
     /* Advance. */
     read_bytes -= page_read_bytes;
@@ -401,6 +402,8 @@ static bool load_segment(struct file *file, off_t ofs, uint8_t *upage,
 ```
 
 load_segment_lazy()를 구현하여 load()에서 load_segment()를 호출하는 부분을 load_segment_lazy()로 변경한다.
+load_segment_lazy()는 load_segment()와 다르게, palloc으로 직접 physical memory에 page를 할당받지 않는다.
+또한, 파일 내용을 바로 읽어오지 않는다. 읽어와야 할 파일 내용에 대한 정보를 계산만 하고, 이를 supplemental page table에 저장한다.
 supplemental page table과 관련된 함수와 그 함수에 관한 스펙은 아래에서 설명한다.
 
 
