--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -462,6 +462,7 @@ stack 크기가 고정되는 문제점을 해결하기 위해서는 stack growth
 현재 구현에서 stack 범위를 넘어가는 경우 page fault가 발생하기 때문에, page fault handler가 stack growth 상황을 인지하도록 해야한다.
 이후, stack growth를 위해 추가적으로 physical memory를 부여함으로써 stack growth를 구현할 수 있다.
 다만, 주의해야하는 점은 stack이 무한정 커지는 것을 막기 위해 stack의 최대 크기를 제한해야한다는 것이다.
+많은 GNU/Linux System에서 stack의 최대 크기는 8MB로 제한되어 있기 때문에 이를 따르도록 한다.
 
 #### Data Structure
 
