stack growth: data structure 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -469,6 +469,21 @@ stack 크기가 고정되는 문제점을 해결하기 위해서는 stack growth
 
 #### Data Structure
 
+최대로 받을 수 있는 page 수는 2048개로 제한하기 위해 MAX_STACK_PAGES를 정의한다. 2048은 8MB를 4KB로 나눈 값이다.
+각 thread 구조체에 현재 stack으로 몇 page를 받은 상태인지를 기입할 수 있는 멤버를 추가한다.
+또한 page fault 발생 시 page fault 발생 주소가 stack growth 상황인지를 판별하기 위해서 stack_bottom을 추가한다.
+
+```c
+#define MAX_STACK_PAGES 2048
+
+struct thread {
+  ...
+  int stack_pages;
+  void *stack_bottom;
+  ...
+}
+```
+
 #### Algorithms and Implementation
 
 ## 5. File Memory Mapping
