stack growth: algo. and impl. 일부 추가

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -486,6 +486,34 @@ struct thread {
 
 #### Algorithms and Implementation
 
+- Stack initialization
+
+최초로 할당받는 stack이 1 page 크기로 존재해야하므로, stack의 초기화는 기존과 동일하게 load()에서 불리는 setup_stack()에서 이루어진다.
+palloc_get_page() 대신, frame_alloc()을 사용하여 physical memory를 할당받도록 수정이 필요하다.
+
+```c
+static bool setup_stack(void **esp) {
+  uint8_t *kpage;
+  bool success = false;
+
+  frame_page = frame_alloc(PAL_USER | PAL_ZERO);
+  if (kpage != NULL) {
+    success = install_page(((uint8_t *) PHYS_BASE) - PGSIZE, frame_page, true);
+    if (success)
+      *esp = PHYS_BASE;
+    else
+      frame_free(frame_page);
+  }
+  return success;
+}
+```
+
+- Stack growth
+
+PUSHA를 통해 한 번에 커지는 stack의 크기가 32 byte이고, 한 번에 이보다 stack의 크기를 키우는 명령어는 없다.
+따라서, page fault 주소와 stack_bottom 사이의 거리가 32 byte 이하라면 stack growth 상황이라고 판단한다.
+
+
 ## 5. File Memory Mapping
 
 ### Current Implementation
