stack growth: algo. and impl. 작성

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -500,7 +500,7 @@ static bool setup_stack(void **esp) {
   uint8_t *kpage;
   bool success = false;
 
-  kpage = frame_alloc(PAL_USER | PAL_ZERO);
+  kpage = frame_alloc(PAL_USER | PAL_ZERO, PHYS_BASE - PGSIZE);
   if (kpage != NULL) {
     success = install_page(((uint8_t *) PHYS_BASE) - PGSIZE, kpage, true);
     if (success)
@@ -512,11 +512,46 @@ static bool setup_stack(void **esp) {
 }
 ```
 
+- Determine stack growth situation
+
+page fault가 발생한 주소가 프로세스가 저장하고 있는 stack_bottom으로 부터 한 페이지 이내인 경우, stack growth 상황이라고 판단한다.
+이외의 경우에는 다른 page fault 상황으로 판단한다.
+
+```c
+bool is_stack_growth(void *fault_addr) {
+  struct thread *t = thread_current();
+  return fault_addr >= t->stack_bottom - PGSIZE && fault_addr < t->stack_bottom;
+}
+```
+
 - Stack growth
 
-PUSHA를 통해 한 번에 커지는 stack의 크기가 32 byte이고, 한 번에 이보다 stack의 크기를 키우는 명령어는 없다.
-따라서, page fault 주소와 stack_bottom 사이의 거리가 32 byte 이하라면 stack growth 상황이라고 판단한다.
+stack growth 상황이라면, frame_alloc()을 통해 physical memory를 할당받고, 이를 stack으로 사용한다.
+이때, frame의 upage를 전달할 때 stack이 자라는 방향이 주소가 작아지는 방향임을 인지하여야 한다.
+따라서, 새로운 stack의 page는 pg_round_down()을 통해 fault_addr을 기준으로 내림을 하여 구할 수 있다.
 
+```c
+bool stack_growth(void *fault_addr) {
+  struct thread *t = thread_current();
+  if (t->stack_pages >= MAX_STACK_PAGES)
+    return false;
+  void *upage = pg_round_down(fault_addr);
+  void *kpage = frame_alloc(PAL_USER | PAL_ZERO, upage);
+  if (kpage == NULL)
+    return false;
+  if (!install_page(upage, kpage, true)) {
+    frame_free(kpage);
+    return false;
+  }
+  t->stack_pages++;
+  t->stack_bottom = upage;
+  return true;
+}
+```
+
+위와 같이 stack_growth()를 구현할 수 있다.
+page_fault()에서 is_stack_growth()를 통해 stack growth 상황인지를 판단하고, stack_growth()를 통해 stack growth를 진행한다.
+stack_growth() 반환 결과가 false인 경우에는 page fault로 처리한다.
 
 ## 5. File Memory Mapping
 
