supplemental: lazy loading/stack growth에 적용

--- a/docs/p3/p3.md
+++ b/docs/p3/p3.md
@@ -398,6 +398,7 @@ static bool load_segment_lazy(struct file *file, off_t ofs, uint8_t *upage,
     size_t page_zero_bytes = PGSIZE - page_read_bytes;
     
     /* Add page to the supplemental page table */
+    spt_add_entry_file(&thread_current()->spt, upage, file, ofs, page_read_bytes, page_zero_bytes, writable);
     
     /* Advance. */
     read_bytes -= page_read_bytes;
@@ -737,6 +738,7 @@ struct thread {
 
 최초로 할당받는 stack이 1 page 크기로 존재해야하므로, stack의 초기화는 기존과 동일하게 load()에서 불리는 setup_stack()에서 이루어진다.
 palloc_get_page() 대신, frame_alloc()을 사용하여 physical memory를 할당받도록 수정이 필요하다.
+또한, 최초로 할당받는 stack page를 supplemental page table에 추가해야한다.
 
 ```c
 static bool setup_stack(void **esp) {
@@ -746,8 +748,10 @@ static bool setup_stack(void **esp) {
   kpage = frame_alloc(PAL_USER | PAL_ZERO, PHYS_BASE - PGSIZE);
   if (kpage != NULL) {
     success = install_page(((uint8_t *) PHYS_BASE) - PGSIZE, kpage, true);
-    if (success)
+    if (success) {
       *esp = PHYS_BASE;
+      spt_add_entry_stack(&thread_current()->spt, PHYS_BASE - PGSIZE);
+    }
     else
       frame_free(kpage);
   }
@@ -786,6 +790,7 @@ bool stack_growth(void *fault_addr) {
     frame_free(kpage);
     return false;
   }
+  spt_add_entry_stack(&t->spt, upage);
   t->stack_pages++;
   t->stack_bottom = upage;
   return true;
@@ -794,6 +799,8 @@ bool stack_growth(void *fault_addr) {
 
 위와 같이 stack_growth()를 구현할 수 있다.
 page_fault()에서 is_stack_growth()를 통해 stack growth 상황인지를 판단하고, stack_growth()를 통해 stack growth를 진행한다.
+install_page()까지 성공적으로 진행되었다면, spt_add_entry_stack()을 통해 supplemental page table에 새로 할당된 stack page를 추가한다.
+stack growth가 성공적으로 이루어진 경우에는 true를 반환하고, 그렇지 않은 경우에는 false를 반환한다.
 stack_growth() 반환 결과가 false인 경우에는 page fault로 처리한다.
 
 ## 5. File Memory Mapping
